Detailed explaination of maths behind the LDA as dimensionality reduction

--- a/Linear Discriminant Dimensionality Reduction.ipynb
+++ b/Linear Discriminant Dimensionality Reduction.ipynb
@@ -591,6 +591,495 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "mean vectors two class ${{\\mu}\\in{R}^{N\\times{2}}}$ is ."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{bmatrix}\n",
+    "\\\\ \\\\ {\\mu}^{0} & {\\mu}^{1} \\\\ \\\\ \\\\  \n",
+    "\\end{bmatrix}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "and your Grand-Mean of each features column there corresponding ${{GM}\\in{R}^{N\\times{1}}}$ is."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{bmatrix}\n",
+    "{GM}_{1} \\\\ {GM}_{2} \\\\ .. \\\\ .. \\\\{GM}_{N}\n",
+    "\\end{bmatrix}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "now we are subtracting Grand mean from Mean vector of each classes ${({\\mu} - {GM})\\in{R}^{N\\times{2}}}$ is."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{bmatrix}\n",
+    "\\\\ \\\\ ({\\mu}^{0} - {GM}) & ({\\mu}^{1} - {GM}) \\\\ \\\\  \n",
+    "\\end{bmatrix}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "now our Between group variability(Distance)  ${\\sigma}_{B}^{2}$we can write as ."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{equation}\n",
+    "{\\sigma}_{B}^{2} = \\frac{\\sum_{i=0}^{1}({\\mu}_{\\lambda}^{i} - {GM}_{\\lambda})^{2}}{2} = \\frac{W^T\\cdot({\\mu} - {GM})\\cdot({\\mu} - {GM})^T\\cdot{W}}{2}\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "now we are going to introduced some trem ${\\in{R}^{N\\times{N}}}$ is."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{equation}\n",
+    "{S}_{B} = \\frac{({\\mu} - {GM})\\cdot({\\mu} - {GM})^T}{2}\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "${{S}_{B}}$ is called the Between class Scatter Matrix."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{equation}\n",
+    "{\\sigma}_{B}^{2} = {W}^T\\cdot{{S}_{B}}\\cdot{W}\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "now by fisher criterion we are going to maximized the ratio of this two variances which is represented by ${C(W)}$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{equation}\n",
+    "C(W) = \\frac{Between-class- variability(distance)}{Within-class-variability(distance)}\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "so our optimization problem is."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{equation}\n",
+    "\\max_{} C(W) = \\frac{{\\sigma}_{B}^{2} }{{\\sigma}_{w}^{2}} = \\frac{W^T\\cdot{{S}_{B}}\\cdot{W}}{W^T\\cdot{{S}_{w}}\\cdot{W}} \n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "so we assume that ${{S}_{B}}$ is ${non-singular-matrix}$ ${\\in{R}^{2\\times{2}}}$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{bmatrix}\n",
+    "{\\sigma}_{B_1}^{2} & {0} \\\\ {0} & {\\sigma}_{B_2}^{2}\n",
+    "\\end{bmatrix}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "same for we assme that ${{S}_{w}}$ is also ${non-singular-matrix}$ ${\\in{R}^{2\\times{2}}}$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{bmatrix}\n",
+    "{\\sigma}_{w_1}^{2} & {0} \\\\ {0} & {\\sigma}_{w_2}^{2}\n",
+    "\\end{bmatrix}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "and unit vector ${W}$ is${\\in{R}^{2\\times{1}}}$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{bmatrix}\n",
+    "{w}_1 \\\\ {w}_2\n",
+    "\\end{bmatrix}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "when we solve the above equation we get some result."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{equation}\n",
+    "W^T\\cdot{{S}_{B}}\\cdot{W}  = {w}_{1}^{2}\\cdot{{\\sigma}_{B_1}^2} + {w}_{2}^{2}\\cdot{{\\sigma}_{B_2}^{2}}\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{equation}\n",
+    "W^T\\cdot{{S}_{w}}\\cdot{W}  = {w}_{1}^{2}\\cdot{{\\sigma}_{w_1}^2} + {w}_{2}^{2}\\cdot{{\\sigma}_{w_2}^{2}}\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "so we are maximized this ratio."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{equation}\n",
+    "\\max_{}C(W)=C({w}_1,{w}_2) = \\frac{{w}_{1}^{2}\\cdot{{\\sigma}_{B_1}^2} + {w}_{2}^{2}\\cdot{{\\sigma}_{B_2}^{2}}}{{w}_{1}^{2}\\cdot{{\\sigma}_{w_1}^2} + {w}_{2}^{2}\\cdot{{\\sigma}_{w_2}^{2}}} = \\frac{f({w}_1,{w}_2)}{g({w}_1,{w}_2)}\n",
+    "\\end{equation}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "for maximization we take partial derivative w.r.t both parameters of above function and make them equal to ${0}$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1-part.\n",
+    "\\begin{equation}\n",
+    "\\frac{{\\partial}}{{\\partial {w}_1}}\\cdot{C({w}_1,{w}_2)}  = 0\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2-part.\n",
+    "\\begin{equation}\n",
+    "\\frac{{\\partial}}{{\\partial {w}_2}}\\cdot{C({w}_1,{w}_2)}  = 0\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "let's compute 1-part."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{equation}\n",
+    "\\frac{\\partial}{\\partial {w}_1}\\cdot{\\frac{f({w}_1,{w}_2)}{g({w}_1,{w}_2)}} = \\frac{g({w}_1,{w}_2)\\cdot{2{w}_{1}{\\sigma}_{B_1}^{2}- f({w_1},{w}_2)\\cdot{2{w}_1{\\sigma}_{w_1}^2}}}{(g({w}_1,{w}_2))^2}\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "after keeping equal to ${0}$ then answer will come is."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{equation}\n",
+    "\\frac{f({w}_1,{w}_2)}{g({w}_1,{w}_2)}\\cdot{w}_1  = \\frac{{\\sigma}_{B_1}^{2}}{{\\sigma}_{w_1}^{2}} \\cdot{w}_1\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{equation}\n",
+    "C({w}_1,{w}_2)\\cdot{w}_1 =  \\frac{{\\sigma}_{B_1}^{2}}{{\\sigma}_{w_1}^{2}} \\cdot{w}_1\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "when you solve for ${w}_2$ then result is look' like that."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{equation}\n",
+    "\\frac{f({w}_1,{w}_2)}{g({w}_1,{w}_2)}\\cdot{w}_2  = \\frac{{\\sigma}_{B_2}^{2}}{{\\sigma}_{w_2}^{2}} \\cdot{w}_2\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{equation}\n",
+    "C({w}_1,{w}_2)\\cdot{w}_2 =  \\frac{{\\sigma}_{B_2}^{2}}{{\\sigma}_{w_2}^{2}} \\cdot{w}_2\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "now our final results after partial derivatives is."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{equation}\n",
+    "C(W)\\cdot{w}_1 =  \\frac{{\\sigma}_{B_1}^{2}}{{\\sigma}_{w_1}^{2}} \\cdot{w}_1\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{equation}\n",
+    "C(W)\\cdot{w}_2 =  \\frac{{\\sigma}_{B_2}^{2}}{{\\sigma}_{w_2}^{2}} \\cdot{w}_2\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "we can also write."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "below this two result through which we try to get some information. and if we combined them we get some intresting result which are given below after some lines."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{equation}\n",
+    " \\frac{{\\sigma}_{B_1}^{2}}{{\\sigma}_{w_1}^{2}} \\cdot{w}_1 = C(W)\\cdot{w}_1\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{equation}\n",
+    " \\frac{{\\sigma}_{B_2}^{2}}{{\\sigma}_{w_2}^{2}} \\cdot{w}_2 =C(W)\\cdot{w}_2 \n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "so we assume that ${{S}_{B}}$ is ${non-singular-matrix}$ ${\\in{R}^{2\\times{2}}}$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{bmatrix}\n",
+    "{\\sigma}_{B_1}^{2} & {0} \\\\ {0} & {\\sigma}_{B_2}^{2}\n",
+    "\\end{bmatrix}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "same for we assme that ${{S}_{w}}$ is also ${non-singular-matrix}$ ${\\in{R}^{2\\times{2}}}$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{bmatrix}\n",
+    "{\\sigma}_{w_1}^{2} & {0} \\\\ {0} & {\\sigma}_{w_2}^{2}\n",
+    "\\end{bmatrix}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "now we take invers of the ${{S}_{w}}$ is ${{S}_{w}^{-1}}$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{bmatrix}\n",
+    "\\frac{1}{{\\sigma}_{w_1}^{2}} & {0} \\\\ {0} & \\frac{1}{{\\sigma}_{w_2}^{2}}\n",
+    "\\end{bmatrix}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "now we taking dot product of ${{S}_{B}}$ with ${{S}_{w}^{-1}}$ is${({S}_{B}\\cdot{{S}_{w}^{-1}})}$  of size ${\\in{R}^{2\\times{2}}}$ then we get matrix look's like."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{bmatrix}\n",
+    "\\frac{{\\sigma}_{B_1}^2}{{\\sigma}_{w_1}^{2}}  & 0 \\\\ 0  &\\frac{{\\sigma}_{B_2}^2}{{\\sigma}_{w_2}^{2}}\n",
+    "\\end{bmatrix}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "we are write final equation which express all the above calculation. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{equation}\n",
+    "({S}_{B}\\cdot{{S}_{w}^{-1}})\\cdot{W} = C(W)\\cdot{W}\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "we are defined all terms  of this equation ${W}$ is ${\\in{R}^{2\\times{1}}}$ unit vector where we are projecting our data. and ${C(W)}$ is scalar quantity because this ratio of two Variances."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I am also give you some information about this above equation. Is that when we Multiply a Matrix with a vector and and we get that vector of some scalar quantity times.  this whole process is happen in the case of EVD(Eigen Value Decompostion)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "in EVD this scalar quantity ${C(W)}$  we can defined by ${\\lambda}$ which is Matrix of Eigen Values. and this eigen values are in this decraesing order somthing like that ${\\lambda}_1$ $>$ ${\\lambda}_2$ $>$.......${\\lambda}_{N}$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "we intersting to find eigen vector corresponding  greater eigen values. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And In Linear Discriminant Dimensionality Reduction we are also try to find a unit vector that which they have greatest eigen value."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
